argocd/base/appset-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: appset

spec:
  entryPoints:
    - websecure
  tls:
    secretName: appset-tls
  routes:
    - kind: Rule
      match: Host(`PLACEHOLDER_DOMAIN`)
      services:
        - kind: Service
          namespace: argocd
          name: argocd-applicationset-controller
          port: webhook
          scheme: http
          strategy: RoundRobin
          weight: 1
