argocd/base/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server

spec:
  entryPoints:
    - websecure
  tls:
    secretName: argocd-server-tls
  routes:
    - kind: Rule
      match: Host(`PLACEHOLDER_DOMAIN`)
      services:
        - kind: Service
          namespace: argocd
          name: argocd-server
          port: 80
          scheme: http
          strategy: RoundRobin
          weight: 1
